Task instance Java/108